--- a/BoutRU.html
+++ b/BoutRU.html
@@ -11,7 +11,7 @@
     <body>
         <nav class="navbar ">
             <ul class="nav-links">
-                <li><a href="BoutMe.html">About Me</a></li>
+                <li><a href="index.html">About Me</a></li>
                 <li><a href="BoutRU.html">About Rutgers</a></li>
                 <li><a href="Resume.html">My Resume</a></li>
             </ul>
@@ -22,7 +22,7 @@
             <ul class="general-text">
                 <li>I go to Rutgers University</li>
                 <li>I go to the Rutgers Newark location</li>
-                <li>Rutgers University Newark offers over 150 ungrade major choices</li>
+                <li>Rutgers University Newark offers over 150 undergraduate major choices</li>
             </ul>
             
             <div class="general-text">
