--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <nav class="navbar">
             <ul class="nav-links">
-                <li><a href="BoutMe.html">About Me</a></li>
+                <li><a href="index.html">About Me</a></li>
                 <li><a href="BoutRU.html">About Rutgers</a></li>
                 <li><a href="Resume.html">My Resume</a></li>
             </ul>
