--- a/Resume.html
+++ b/Resume.html
@@ -24,7 +24,7 @@
             <p class="bottom-margin">Phone: (973) 676-4000 </p>
             <p>Experience:</p>
             <hr class="divider">
-            <img class="bottom-margin" src = "dog_meme.jpg" width="225" height="145">
+            <img class="bottom-margin" src = "dog_meme.jpg" width="275" height="195">
             <p>Projects:</p>
             <hr class="divider">
 
@@ -34,9 +34,9 @@
                     <li class="small-bottom-margin">Scans a Wireshark file and reports possible causes of lag</li>
                 </ul>
                 
-                <li class="small-bottom-margin">Password Stregth Tester</li>
+                <li class="small-bottom-margin">Password Strength Tester</li>
                 <ul>
-                    <li class="small-bottom-margin">Enter a password and tells you what to improve to make it stronger</li>
+                    <li class="small-bottom-margin">Enter a password, and it tells you what to improve to make it stronger</li>
                 </ul>
             </ul>
 
