--- a/BoutRU.html
+++ b/BoutRU.html
@@ -21,8 +21,8 @@
             <h1 class="centered-text">My University</h1>
             <ul class="general-text">
                 <li>I go to Rutgers University</li>
-                <li>I go to the Rutgers Newark location</li>
-                <li>Rutgers University Newark offers over 150 undergraduate major choices</li>
+                <li>I attend the Rutgers University–Newark campus </li>
+                <li>Rutgers University–Newark offers over 150 undergraduate programs</li>
             </ul>
             
             <div class="general-text">
