--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
             <p class="centered-text">Fun Fact: I won $31 while playing poker over spring break</p>
             <img class="image-center" src = "gambling-pokemon1.png" width="300" height="350">
             <p class="centered-text">My top 3 artists on last year’s Spotify Wrapped are:</p>
-            <ol class="centered-text">
-              <li>Beabadoobee</li>
-              <li>Willis</li>
-              <li>Ericdoa</li>
-            </ol>
+            <p class="centered-text">1: Beabadoobee 2: Willis 3: Ericdoa</p>
         </div>
     </body>
 
