--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html">About Me</a></li>
                 <li><a href="BoutRU.html">About Rutgers</a></li>
                 <li><a href="Resume.html">My Resume</a></li>
+                <li><a href="Calc.html">Calculator</a></li>
             </ul>
         </nav>
 
